Fixes height on mobile devices

--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -15,6 +15,7 @@
 body {
   -ms-overflow-style: scrollbar;
   scroll-behavior: smooth;
+
   &::before {
     content: '';
     width: 100%;
@@ -25,12 +26,13 @@ body {
     z-index: 999999;
     @include vendor('background-image', 'linear-gradient(78deg, #{_palette(accent1)} #{100% * _slice(2)}, #{_palette(accent2)} #{100% * _slice(2)}, #{_palette(accent2)} #{100% * _slice(3)}, #{_palette(accent3)} #{100% * _slice(3)}, #{_palette(accent3)} #{100% * _slice(4)}, #{_palette(accent4)} #{100% * _slice(4)}, #{_palette(accent4)} #{100% * _slice(5)}, #{_palette(accent5)} #{100% * _slice(5)})');
   }
-}
 
-// Ensures page width is always >=320px.
-@include breakpoint('<=xsmall') {
-  html, body {
-    min-width: 320px;
+  // Stops initial animations until page loads.
+  &.is-preload {
+    *, *:before, *:after {
+      @include vendor('animation', 'none !important');
+      @include vendor('transition', 'none !important');
+    }
   }
 }
 
@@ -41,24 +43,17 @@ html {
   scroll-behavior: smooth;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+// Scale to 100% to catch "viewport - interfaceHeight" on mobile browsers!
+html, body {
+  height: 100%;
+  overflow: visible;
+
+  // Ensures page width is always >=320px.
+  @include breakpoint('<=xsmall') {
+    min-width: 320px;
+  }
 }
 
-body {
-  //background-color: _palette(bg);
-  //@include vendor('background-image', (
-  //  'url("images/overlay.png")',
-  //  'linear-gradient(45deg, #{_palette(bg1)} 15%, #{_palette(bg2) 85%})',
-  //));
-
-
-  // Stops initial animations until page loads.
-  &.is-preload {
-    *, *:before, *:after {
-      @include vendor('animation', 'none !important');
-      @include vendor('transition', 'none !important');
-    }
-  }
-
+*, *:before, *:after {
+  box-sizing: inherit;
 }
